// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, error 1`] = `
{
  "data": {
    "dolor_mock-product-id": {
      "data": [
        "dolor",
      ],
      "id": "dolor_mock-product-id",
    },
    "ipsum_mock-product-id": {
      "data": [
        "ipsum",
      ],
      "id": "ipsum_mock-product-id",
    },
  },
  "dataSets": [
    {
      "data": [
        "ipsum",
      ],
      "id": "ipsum_mock-product-id",
    },
    {
      "data": [
        "dolor",
      ],
      "id": "dolor_mock-product-id",
    },
  ],
  "error": true,
  "fulfilled": undefined,
  "pending": undefined,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, fulfilled 1`] = `
{
  "data": {
    "dolor_mock-product-id": {
      "data": [
        "dolor",
      ],
      "id": "dolor_mock-product-id",
    },
    "ipsum_mock-product-id": {
      "data": [
        "ipsum",
      ],
      "id": "ipsum_mock-product-id",
    },
  },
  "dataSets": [
    {
      "data": [
        "ipsum",
      ],
      "id": "ipsum_mock-product-id",
    },
    {
      "data": [
        "dolor",
      ],
      "id": "dolor_mock-product-id",
    },
  ],
  "error": undefined,
  "fulfilled": true,
  "pending": undefined,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, pending 1`] = `
{
  "data": {
    "dolor_mock-product-id": {
      "data": [
        "dolor",
      ],
      "id": "dolor_mock-product-id",
    },
    "ipsum_mock-product-id": {
      "data": [
        "ipsum",
      ],
      "id": "ipsum_mock-product-id",
    },
  },
  "dataSets": [
    {
      "data": [
        "ipsum",
      ],
      "id": "ipsum_mock-product-id",
    },
    {
      "data": [
        "dolor",
      ],
      "id": "dolor_mock-product-id",
    },
  ],
  "error": undefined,
  "fulfilled": undefined,
  "pending": true,
}
`;

exports[`GraphCardContext should parse configuration: configuration, basic 1`] = `
{
  "groupedFiltersSettings": undefined,
  "standaloneFiltersSettings": [],
}
`;

exports[`GraphCardContext should parse configuration: configuration, grouped 1`] = `
{
  "groupedFiltersSettings": {
    "settings": {
      "isStandalone": false,
      "metric": undefined,
      "metrics": [
        {
          "chartType": "area",
          "id": "Core-seconds_loremIpsum",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "isToolbarFilter": false,
          "metric": "Core-seconds",
          "strokeWidth": 2,
        },
      ],
    },
  },
  "standaloneFiltersSettings": [],
}
`;

exports[`GraphCardContext should parse configuration: configuration, standalone 1`] = `
{
  "groupedFiltersSettings": undefined,
  "standaloneFiltersSettings": [
    {
      "settings": {
        "actions": undefined,
        "isStandalone": true,
        "metric": {
          "chartType": "area",
          "id": "Core-seconds_loremIpsum",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": true,
          "isThreshold": false,
          "isToolbarFilter": false,
          "metric": "Core-seconds",
          "strokeWidth": 2,
        },
        "metrics": [
          {
            "chartType": "area",
            "id": "Core-seconds_loremIpsum",
            "isCapacity": false,
            "isStacked": true,
            "isStandalone": true,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Core-seconds",
            "strokeWidth": 2,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
      },
    },
  ],
}
`;

exports[`GraphCardContext should return specific properties: specific properties 1`] = `
{
  "DEFAULT_CONTEXT": [
    {
      "settings": {
        "isStandalone": false,
        "metric": undefined,
        "metrics": [],
      },
    },
    [Function],
  ],
  "GraphCardContext": {
    "$$typeof": Symbol(react.context),
    "Consumer": {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": [Circular],
    },
    "Provider": {
      "$$typeof": Symbol(react.provider),
      "_context": [Circular],
    },
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": [
      {
        "settings": {
          "isStandalone": false,
          "metric": undefined,
          "metrics": [],
        },
      },
      [Function],
    ],
    "_currentValue2": [
      {
        "settings": {
          "isStandalone": false,
          "metric": undefined,
          "metrics": [],
        },
      },
      [Function],
    ],
    "_threadCount": 0,
  },
  "useGetMetrics": [Function],
  "useGraphCardActions": [Function],
  "useGraphCardContext": [Function],
  "useMetricsSelector": [Function],
  "useParseFiltersSettings": [Function],
}
`;
